--- a/eShopAdmin/Store/Components/Pages/Products.razor
+++ b/eShopAdmin/Store/Components/Pages/Products.razor
@@ -34,7 +34,7 @@ else
             {
                 <tr>
                     <td> <!-- Simulating images stored on a CDN -->
-                        <img height="80" width="80" src="https://raw.githubusercontent.com/MicrosoftDocs/mslearn-aspire-starter/main/Products/wwwroot/images/@product.ImageUrl" />
+                        <img height="80" width="80" alt="Product image for @product.Name." src="https://raw.githubusercontent.com/MicrosoftDocs/mslearn-aspire-starter/main/eShopAdmin/Products/wwwroot/images/@product.ImageUrl" />
                     </td>
                     <td>@product.Name</td>
                     <td>@product.Description</td>
